--- a/admin-main/package.json
+++ b/admin-main/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
